--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,14 @@
 			<div class="col-sm-12 topbar-container flex-items-sm-middle">
 				<div class="topbar-contacts">
 					<ul>
-						<li class="last"></li>						
+						<li class="last hidden-lg-up">
+                            <a href="https://www.champion-fx.com/en/contact.html">
+                                <span class="fx-topbar fx-contact"></span>
+                            </a>
+                        </li>
+                        <li class="last hidden-lg-down">
+                            <a href="https://www.champion-fx.com/en/contact.html">Contact Us</a>
+                        </li>					
 					</ul>
 				</div>
 				<div class="upgrade-message pulser invisible">
