Add 'About MT5, Types of accounts' under MT5 menu

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -58,6 +58,8 @@
 							MetaTrader 5
 						</a>
 						<ul class="navbar__nav__menu">
+							<li><a href="https://www.champion-fx.com/en/trading-platform/metatrader-5.html">About MT5</a></li>
+							<li><a href="https://www.champion-fx.com/en/trading-platform/mt5-types-of-accounts.html">Types of accounts</a></li>
 							<li><a href="https://www.champion-fx.com/en/forex.html">Forex</a></li>
 							<li><a href="https://www.champion-fx.com/en/cfd.html">CFDs</a></li>
 							<li><a href="https://www.champion-fx.com/en/metals.html">Metals</a></li>
