--- a/_includes/lang.html
+++ b/_includes/lang.html
@@ -10,7 +10,7 @@
 {% assign siteLang = 'en' %}{% assign LangUrl = '/en/' %}
 {% endif %}
 {% assign coresource = site.github.url %}
-	{% if coresource contains "https" %}{% assign domain = site.github.url %}
+	{% if coresource contains "https" %}{% assign cfxSource = site.github.url %}
 {% else %}
-	{% assign domain = site.github.url | replace: 'http', 'https' %}
+	{% assign cfxSource = site.github.url | replace: 'http', 'https' %}
 {% endif %}
