--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,5 +13,5 @@
 	<link rel="stylesheet" href="https://kelly-championfx.github.io/binary-style/binary.css"/>	
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" type="text/javascript"></script>
 	<script src="https://kelly-championfx.github.io/binary-style/binary.js" type="text/javascript"></script>
-	<link rel="stylesheet" href="{{ "academy/assets/css/cfx-academy.css" | prepend: domain }}">
+	<link rel="stylesheet" href="{{ "/assets/css/cfx-academy.css" | prepend: domain }}">
 </head>
