--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,317 +1,129 @@
-<div id="top_group" class="">
-<div id="msg_notification" class="notice-msg center-text"></div>
-<div id="topbar" class="primary-color-dark logged-in">
-<div class="menu-container">
-<div class="row">
-<div class="col-sm-12 topbar-container flex-items-sm-middle">
-<div class="topbar-contacts">
-<ul>
-<li class="last hidden-lg-up">
-<a href="/en/contact.html">
-<span class="fx-topbar fx-contact-icon"></span>
-</a>
-</li>
-<li class="last hidden-lg-down">
-<a href="/en/contact.html">Contact Us</a>
-</li>
-<li class="FX__Header__cta logged-out hidden-lg-down">
-<a class="btn-login button-secondary" href="javascript:;">Log In</a>
-</li>
-</ul>
-</div>
-<div class="invisible">
-<div class="languages">
-<ul id="display_language">
-<li class="EN"> <span class="world world-white"></span> <span class="language">English</span> <span class="nav-caret"></span> </li>
-</ul>
-<ul id="select_language" style="opacity: 0; visibility: hidden; display: none;">
-<li class="EN"> <span class="world world-black"></span> <span class="language">English</span> <span class="nav-caret"></span> </li>
-<li class="ID">Indonesia</li>
-<li class="DE">Deutsch</li>
-<li class="EN invisible">English</li>
-<li class="ES">Español</li>
-<li class="FR">Français</li>
-<li class="IT">Italiano</li>
-<li class="PL">Polski</li>
-<li class="PT">Português</li>
-<li class="RU">Русский</li>
-<li class="VI">Tiếng Việt</li>
-<li class="ZH_CN">简体中文</li>
-<li class="ZH_TW">繁體中文</li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-</div>
+<div class="topbar primary-color-dark logged-in">
+	<div class="menu-container">
+		<div class="row">
+			<div class="col-sm-12 topbar-container flex-items-sm-middle">
+				<div class="topbar-contacts">
+					<ul>
+						<li class="last"></li>						
+					</ul>
+				</div>
+				<div class="upgrade-message pulser invisible">
+					
+				</div>
+				<div class="invisible">
+					<div class="languages">
+						<ul id="display_language">
+							<li class="EN"> <span class="world world-white"></span> <span class="language">English</span> <span class="nav-caret"></span> </li>
+						</ul>
+						<ul id="select_language">
+							<li class="EN"> <span class="world world-black"></span> <span class="language">English</span> <span class="nav-caret"></span> </li>
+							<li class="ID">Indonesia</li>
+							<li class="DE">Deutsch</li>
+							<li class="EN invisible">English</li>
+							<li class="ES">Español</li>
+							<li class="FR">Français</li>
+							<li class="IT">Italiano</li>
+							<li class="PL">Polski</li>
+							<li class="PT">Português</li>
+							<li class="RU">Русский</li>
+							<li class="VI">Tiếng Việt</li>
+							<li class="ZH_CN">简体中文</li>
+							<li class="ZH_TW">繁體中文</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 <div id="header" class="dark-blue header">
-<div class="menu-container">
-<div class="row">
-
-<div class="col-lg-2 col-sm-4 col-xs-5 hidden-lg-up vertical-center">
-<div class="nav-menu nav-toggle-dropdown">
-<a href="javascript:;" id="mobile_menu_icon" class="vertical-center hidden-lg-up"><span></span></a>
+	<div class="menu-container">
+		<div class="row">
+			<div class="col-md-3 col-sm-6 col-xs-6 vertical-center">
+				<div class="logo-wrapper">
+					<a href="https://www.champion-fx.com/en/home.html" class="logo-parent">
+						<div class="logo">
+							<div></div>
+						</div>
+						<div class="binary-logo-text">
+							<div></div>
+						</div>
+					</a>
+				</div>
+			</div>
+		<div class="col-md-2 push-md-7 col-sm-6 col-xs-6 vertical-center">
+			<div id="main-logout" class="hidden-lg-up">
+				<ul id="main-account" class="nav-menu main-nav">
+					<li id="mobile_menu_icon" class="logged-out vertical-center hidden-lg-up "><span></span></li>
+					<li class="account logged-in invisible">
+						<a href="javascript:;">
+							<div class="main-account">
+								<div class="account-type"></div>
+								<div class="account-id"></div>
+								<div class="topMenuBalance"></div>
+							</div>
+							<div class="nav-caret"></div>
+						</a>
+					</li>
+				</ul>
+				<ul id="all-accounts" class="nav-menu main-nav">
+					<li class="account">
+						
+						<ul>
+							
+							
+							<div class="separator-line-thin-gray invisible logged-in"></div>
+							<a href="https://www.champion-fx.com/en/about-us.html" class="hidden-lg-up">
+								<li>About</li>
+							</a>
+							<li class="hidden-lg-up has-sub">
+								<a href="javascript:;">MT5</a>
+									<ul class="invisible">
+										<li><a href="https://www.champion-fx.com/en/forex.html">Forex</a></li>
+										<li><a href="https://www.champion-fx.com/en/cfd.html">CFDs</a></li>
+										<li><a href="https://www.champion-fx.com/en/metals.html">Metals</a></li>
+									</ul>
+							</li>
+							<a href="https://www.champion-fx.com/en/binary-options.html" class="hidden-lg-up">
+								<li>Binary Options</li>
+							</a>
+							<a href="https://www.champion-fx.com/en/trading-platform.html" class="hidden-lg-up">
+								<li>Trading Platforms</li>
+							</a>
+							<a href="https://www.champion-fx.com/en/partnerships.html" class="hidden-lg-up">
+								<li>Partnerships</li>
+							</a>
+							<div class="separator-line-thin-gray hidden-lg-up invisible logged-in"></div>
+							<div class="login-id-list"></div>
+							<a href="javascript:;" id="btn_logout" class="logout invisible logged-in">
+								<li>Sign out</li>
+							</a>
+						</ul>
+					</li>
+				</ul>
+			</div>
+				<div id="main-signup" class="logged-out hidden-lg-down">
+					
+				</div>
+		</div>
+			<div class="col-md-7 pull-md-2 hidden-lg-down vertical-center">
+				<ul class="top-nav-menu">
+					<li><a href="https://www.champion-fx.com/en/about-us.html" class="nav-dropdown-toggle">About</a></li>
+					<li><a href="javascript:;" class="nav-dropdown-toggle">MT5 <span class="nav-caret"></span></a>
+						<ul>
+							<li><a href="https://www.champion-fx.com/en/forex.html">Forex</a></li>
+							<li><a href="https://www.champion-fx.com/en/cfd.html">CFDs</a></li>
+							<li><a href="https://www.champion-fx.com/en/metals.html">Metals</a></li>
+						</ul>
+					</li>
+					<li><a href="https://www.champion-fx.com/en/binary-options.html" class="nav-dropdown-toggle">Binary Options</a></li>
+					<li><a href="https://www.champion-fx.com/en/trading-platform.html" class="nav-dropdown-toggle">Trading Platforms</a></li>
+					<li><a href="https://www.champion-fx.com/en/partnerships.html" class="nav-dropdown-toggle">Partnerships</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
 </div>
-</div>
-
-<div id="mobile-menu" class="nav-menu">
-<ul class="nav-menu-dropdown hidden-lg-up" style="height: 761px;">
-<div class="login-id-list"></div>
-<li class="invisible logged-in mt-hide">
-<a href="/en/user/metatrader.html" class="">
-<span class="nav-menu-icon pull-left fx-mt5-icon"></span>
-MetaTrader 5
-</a>
-</li>
-<li class="invisible logged-in ">
-<a href="/en/cashier.html" class="">
-<span class="nav-menu-icon pull-left fx-cashier-icon"></span>
-Cashier
-</a>
-</li>
-<li class="invisible logged-in ">
-<a href="/en/user/settings.html" class="">
-<span class="nav-menu-icon pull-left fx-setting-icon"></span>
-Settings
-</a>
-</li>
-<li class=" ">
-<a href="/en/about-us.html" class="">
-<span class="nav-menu-icon pull-left fx-about-icon"></span>
-About Us
-</a>
-</li>
-<li class=" ">
-<a href="javascript:;" id="more_mt5_btn" class=" nav-dropdown-toggle">
-<span class="nav-menu-icon pull-left fx-mt5-icon"></span>
-MetaTrader 5
-<span class="nav-menu-icon pull-right fx-moremenu-icon"></span>
-</a>
-<ul class="invisible submenu">
-<li class=" ">
-<a href="/en/trading-platform/metatrader-5.html" class="">
-About MT5
-</a>
-</li>
-<li class=" ">
-<a href="/en/trading-platform/mt5-types-of-accounts.html" class="">
-Types of accounts
-</a>
-</li>
-<li class=" ">
-<a href="/en/forex.html" class="">
-Forex
-</a>
-</li>
-<li class=" ">
-<a href="/en/cfd.html" class="">
-CFDs
-</a>
-</li>
-<li class=" ">
-<a href="/en/metals.html" class="">
-Metals
-</a>
-</li>
-<li class=" ">
-<a href="/en/economic-calendar.html" class="">
-Economic calendar
-</a>
-</li>
-</ul>
-</li>
-<li class=" ">
-<a href="javascript:;" id="more_options_btn" class=" nav-dropdown-toggle">
-<span class="nav-menu-icon pull-left fx-binary-icon"></span>
-Binary Options
-<span class="nav-menu-icon pull-right fx-moremenu-icon"></span>
-</a>
-<ul class="invisible submenu">
-<li class=" ">
-<a href="/en/binary-options.html" class="">
-About binary options
-</a>
-</li>
-<li class=" ">
-<a href="/en/types-of-accounts.html" class="">
-Types of accounts
-</a>
-</li>
-</ul>
-</li>
-<li class=" ">
-<a href="/en/trading-platform.html" class="">
- <span class="nav-menu-icon pull-left fx-trading-icon"></span>
-Trading Platforms
-</a>
-</li>
-<li class=" ">
-<a href="/en/partnerships.html" class="">
-<span class="nav-menu-icon pull-left fx-partnership-icon"></span>
-Partnerships
-</a>
-</li>
-<li class="invisible logged-in ">
-<a href="/en/user/settings.html" class="btn-logout logout invisible logged-in">
-<span class="nav-menu-icon pull-left fx-signout-icon"></span>
-Sign out
-</a>
-</li>
-<div class="separator-line-thin-gray"></div>
-</ul>
-</div>
-<div class="col-xl-3 col-lg-8 col-sm-4 col-xs-2 vertical-center">
-<div class="logo-wrapper">
-<a href="/en/home.html" class="logo-parent">
-<div class="logo">
-<div></div>
-</div>
-<div class="binary-logo-text hidden-xs-down">
-<div></div>
-</div>
-</a>
-</div>
-</div>
-<div class="col-lg-7 hidden-lg-down vertical-center">
-<ul class="top-nav-menu logged-out">
-<li>
-<a href="/en/about-us.html" class="nav-dropdown-toggle">About Us</a>
-</li>
-<li>
-<a href="javascript:;" class="nav-dropdown-toggle">MetaTrader 5<span class="nav-caret"></span></a>
-<ul class="top-nav-menu logged-out" style="opacity: 0; visibility: hidden; display: none;">
-<li>
-<a href="/en/trading-platform/metatrader-5.html" class="nav-dropdown-toggle">About MT5</a>
-</li>
-<li>
-<a href="/en/trading-platform/mt5-types-of-accounts.html" class="nav-dropdown-toggle">Types of accounts</a>
-</li>
-<li>
-<a href="/en/forex.html" class="nav-dropdown-toggle">Forex</a>
-</li>
-<li>
-<a href="/en/cfd.html" class="nav-dropdown-toggle">CFDs</a>
-</li>
-<li>
-<a href="/en/metals.html" class="nav-dropdown-toggle">Metals</a>
-</li>
-<li>
-<a href="/en/economic-calendar.html" class="nav-dropdown-toggle">Economic calendar</a>
-</li>
-</ul>
-</li>
-<li>
-<a href="javascript:;" class="nav-dropdown-toggle">Binary Options<span class="nav-caret"></span></a>
-<ul class="top-nav-menu logged-out" style="opacity: 0; visibility: hidden; display: none;">
-<li>
-<a href="/en/binary-options.html" class="nav-dropdown-toggle">About binary options</a>
-</li>
-<li>
-<a href="/en/types-of-accounts.html" class="nav-dropdown-toggle">Types of accounts</a>
-</li>
-</ul>
-</li>
-<li>
-<a href="/en/trading-platform.html" class="nav-dropdown-toggle">Trading platforms</a>
-</li>
-<li>
-<a href="/en/partnerships.html" class="nav-dropdown-toggle">Partnerships</a>
-</li>
-</ul>
-<ul class="top-nav-menu invisible logged-in">
-<li class="mt-hide">
-<a href="/en/user/settings.html" class="nav-dropdown-toggle">Settings</a>
-</li>
-<li class="mt-show">
-<a href="/en/user/metatrader.html" class="nav-dropdown-toggle">Settings</a>
-</li>
-<li class="mt-hide">
-<a href="/en/cashier.html" class="nav-dropdown-toggle">Cashier</a>
-</li>
-<li class="mt-hide">
-<a href="/en/trading-platform/champion-trader.html" class="nav-dropdown-toggle">Trading platforms</a>
-</li>
-<li class="mt-show">
-<a href="/en/trading-platform/mt5-platforms.html" class="nav-dropdown-toggle">Trading platforms</a>
-</li>
-<li>
-<a href="https://academy.champion-fx.com/" target="_blank" class="nav-dropdown-toggle">Academy</a>
-</li>
-</ul>
-</div>
-<div class="col-lg-2 col-sm-4 col-xs-5 vertical-center">
-<div class="right-align">
-<div class="logged-out">
-<div id="main-login" class="hidden-lg-up">
-<ul class="login-button">
-<li><a class="btn-login button" href="javascript:;"><span>Log In</span></a></li>
-</ul>
-</div>
-<div id="main-signup">
-<ul class="signup-button">
-<li><a class="button-secondary" href="/en/home.html#signup"><span>Sign Up</span></a></li>
-</ul>
-</div>
-</div>
-
-<div class="logged-in invisible hidden-lg-up">
-<a id="account-info" href="javascript:;" class="main-account nav-menu nav-toggle-dropdown">
-<div class="account-id mt-hide"></div>
-<span class="account-balance mt-hide"></span>
-<span class="account-type mt-hide"></span>
-<div class="mt-show invisible">MetaTrader 5</div>
-</a>
-</div>
-<div id="main-logout" class="logged-in invisible hidden-lg-down">
-<ul id="main-account" class="nav-menu main-nav hidden-lg-down">
-<li class="account">
-<a href="javascript:;">
-<div class="main-account">
-<div class="account-id mt-hide"></div>
-<span class="account-balance mt-hide"></span>
-<span class="account-type mt-hide"></span>
-<div class="mt-show invisible">MetaTrader 5</div>
-</div>
-<div class="nav-caret"></div>
-</a>
-</li>
-</ul>
-<ul id="all-accounts" class="nav-menu main-nav hidden-lg-down" style="opacity: 0; visibility: hidden; display: none;">
-<li class="account">
-<a href="javascript:;" class="menu-icon">
-<div class="main-account">
-<div class="account-id mt-hide"></div>
-<span class="account-balance mt-hide"></span>
-<span class="account-type mt-hide"></span>
-<div class="mt-show invisible">MetaTrader 5</div>
-</div>
-<div class="nav-caret"></div>
-</a>
-<ul>
-<div class="login-id-list"></div>
-<a href="/en/new-account/real.html" class="upgrade invisible">
-<li>Upgrade to<br>Real Account</li>
-<div class="separator-line-thin-gray"></div>
-</a>
-<a href="/en/user/metatrader.html" class="mt-hide">
-<li>MetaTrader 5</li>
-<div class="separator-line-thin-gray"></div>
-</a>
-<a href="javascript:;" class="btn-logout logout">
-<li>Sign out</li>
-</a>
-</ul>
-</li>
- </ul>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-
 <div class="primary-color-dark mt5-header ">
 	<div class="fx-panel center-text container fx-middle">
 		<div class="row">
