--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,84 +1,128 @@
-<div id="topbar" class="primary-color-dark logged-in">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12 topbar-container flex-items-sm-middle">
+<div class="topbar primary-color-dark logged-in">
+	<div class="menu-container">
+		<div class="row">
+			<div class="col-sm-12 topbar-container flex-items-sm-middle">
 				<div class="topbar-contacts">
 					<ul>
-						<li class="last hidden-lg-up">
-							<a href="https://www.champion-fx.com/en/contact.html">
-								<span class="fx-topbar fx-contact"></span>
-							</a>
-						</li>
-						<li class="last hidden-lg-down">
-							<a href="https://www.champion-fx.com/en/contact.html">Contact Us</a>
-						</li>					
+						<li class="last"></li>						
 					</ul>
 				</div>
-                <div class="invisible">
-                    <div class="languages">
-                        <ul id="display_language">
-                            <li class="EN"> <span class="world world-white"></span> <span class="language">English</span> <span class="nav-caret"></span> </li>
-                        </ul>
-                        <ul id="select_language">
-                            <li class="EN"> <span class="world world-black"></span> <span class="language">English</span> <span class="nav-caret"></span> </li>
-                            <li class="ID">Indonesia</li>
-                            <li class="DE">Deutsch</li>
-                            <li class="EN invisible">English</li>
-                            <li class="ES">Español</li>
-                            <li class="FR">Français</li>
-                            <li class="IT">Italiano</li>
-                            <li class="PL">Polski</li>
-                            <li class="PT">Português</li>
-                            <li class="RU">Русский</li>
-                            <li class="VI">Tiếng Việt</li>
-                            <li class="ZH_CN">简体中文</li>
-                            <li class="ZH_TW">繁體中文</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+				<div class="upgrade-message pulser invisible">
+					
+				</div>
+				<div class="invisible">
+					<div class="languages">
+						<ul id="display_language">
+							<li class="EN"> <span class="world world-white"></span> <span class="language">English</span> <span class="nav-caret"></span> </li>
+						</ul>
+						<ul id="select_language">
+							<li class="EN"> <span class="world world-black"></span> <span class="language">English</span> <span class="nav-caret"></span> </li>
+							<li class="ID">Indonesia</li>
+							<li class="DE">Deutsch</li>
+							<li class="EN invisible">English</li>
+							<li class="ES">Español</li>
+							<li class="FR">Français</li>
+							<li class="IT">Italiano</li>
+							<li class="PL">Polski</li>
+							<li class="PT">Português</li>
+							<li class="RU">Русский</li>
+							<li class="VI">Tiếng Việt</li>
+							<li class="ZH_CN">简体中文</li>
+							<li class="ZH_TW">繁體中文</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 <div id="header" class="dark-blue header">
-	<nav class="navbar">
-		<div class="container">
-			<span class="navbar__toggle" id="toggle-menu" href="button"></span>
-			<a class="navbar__brand fx-logo" href="https://champion-fx.com">
-				<span class="fx-logo__icon--light"></span>
-				<span class="fx-logo__wordmark--light"></span>
-			</a>
-			<div class="navbar__nav">
-				<ul class="navbar__nav__menu">
-					<li><a href="https://www.champion-fx.com/en/about-us.html"><span class="fx-about fx"></span>About Us</a></li>
-					<li>
-						<a class="navbar__nav__toggle" href="javascript:;">
-							<span class="fx-mt5-o fx"></span>
-							MetaTrader 5
+	<div class="menu-container">
+		<div class="row">
+			<div class="col-md-3 col-sm-6 col-xs-6 vertical-center">
+				<div class="logo-wrapper">
+					<a href="https://www.champion-fx.com/en/home.html" class="logo-parent">
+						<div class="logo">
+							<div></div>
+						</div>
+						<div class="binary-logo-text">
+							<div></div>
+						</div>
+					</a>
+				</div>
+			</div>
+		<div class="col-md-2 push-md-7 col-sm-6 col-xs-6 vertical-center">
+			<div id="main-logout" class="hidden-lg-up">
+				<ul id="main-account" class="nav-menu main-nav">
+					<li id="mobile_menu_icon" class="logged-out vertical-center hidden-lg-up "><span></span></li>
+					<li class="account logged-in invisible">
+						<a href="javascript:;">
+							<div class="main-account">
+								<div class="account-type"></div>
+								<div class="account-id"></div>
+								<div class="topMenuBalance"></div>
+							</div>
+							<div class="nav-caret"></div>
 						</a>
-						<ul class="navbar__nav__menu">
+					</li>
+				</ul>
+				<ul id="all-accounts" class="nav-menu main-nav">
+					<li class="account">
+						
+						<ul>
+							
+							
+							<div class="separator-line-thin-gray invisible logged-in"></div>
+							<a href="https://www.champion-fx.com/en/about-us.html" class="hidden-lg-up">
+								<li>About</li>
+							</a>
+							<li class="hidden-lg-up has-sub">
+								<a href="javascript:;">MT5</a>
+									<ul class="invisible">
+										<li><a href="https://www.champion-fx.com/en/forex.html">Forex</a></li>
+										<li><a href="https://www.champion-fx.com/en/cfd.html">CFDs</a></li>
+										<li><a href="https://www.champion-fx.com/en/metals.html">Metals</a></li>
+									</ul>
+							</li>
+							<a href="https://www.champion-fx.com/en/binary-options.html" class="hidden-lg-up">
+								<li>Binary Options</li>
+							</a>
+							<a href="https://www.champion-fx.com/en/trading-platform.html" class="hidden-lg-up">
+								<li>Trading Platforms</li>
+							</a>
+							<a href="https://www.champion-fx.com/en/partnerships.html" class="hidden-lg-up">
+								<li>Partnerships</li>
+							</a>
+							<div class="separator-line-thin-gray hidden-lg-up invisible logged-in"></div>
+							<div class="login-id-list"></div>
+							<a href="javascript:;" id="btn_logout" class="logout invisible logged-in">
+								<li>Sign out</li>
+							</a>
+						</ul>
+					</li>
+				</ul>
+			</div>
+				<div id="main-signup" class="logged-out hidden-lg-down">
+					
+				</div>
+		</div>
+			<div class="col-md-7 pull-md-2 hidden-lg-down vertical-center">
+				<ul class="top-nav-menu">
+					<li><a href="https://www.champion-fx.com/en/about-us.html" class="nav-dropdown-toggle">About</a></li>
+					<li><a href="javascript:;" class="nav-dropdown-toggle">MT5 <span class="nav-caret"></span></a>
+						<ul>
 							<li><a href="https://www.champion-fx.com/en/forex.html">Forex</a></li>
 							<li><a href="https://www.champion-fx.com/en/cfd.html">CFDs</a></li>
 							<li><a href="https://www.champion-fx.com/en/metals.html">Metals</a></li>
-							<li><a href="https://www.champion-fx.com/en/economic-calendar.html">Economic calendar</a></li>
 						</ul>
 					</li>
-					<li>
-						<a class="navbar__nav__toggle" href="javascript:;">
-							<span class="fx-binary fx"></span>
-							Binary Options
-						</a>
-						<ul class="navbar__nav__menu">
-							<li><a href="https://www.champion-fx.com/en/binary-options.html">About binary options</a></li>
-							<li><a href="https://www.champion-fx.com/en/types-of-accounts.html">Types of accounts</a></li>
-						</ul>
-					</li>
-					<li><a href="https://www.champion-fx.com/en/trading-platform.html"><span class="fx-trading fx"></span>Trading Platforms</a></li>
-					<li><a href="https://www.champion-fx.com/en/partnerships.html"><span class="fx-partnership fx"></span>Partnerships</a></li>
+					<li><a href="https://www.champion-fx.com/en/binary-options.html" class="nav-dropdown-toggle">Binary Options</a></li>
+					<li><a href="https://www.champion-fx.com/en/trading-platform.html" class="nav-dropdown-toggle">Trading Platforms</a></li>
+					<li><a href="https://www.champion-fx.com/en/partnerships.html" class="nav-dropdown-toggle">Partnerships</a></li>
 				</ul>
 			</div>
 		</div>
-	</nav>
+	</div>
 </div>
 <div class="primary-color-dark mt5-header ">
 	<div class="fx-panel center-text container fx-middle">
